# controllers/article.js
@@ -9,68 +9,74 @@ const create = async (req, res) => {
   try {
     validateArticle(data)
   } catch (error) {
-    return res.status(400).json({ status: "error", message: `Error to create article: ${error.message}` })
+    return res.status(400).json({ status: "error", message: `Error creating article: ${error.message}` })
   }
 
   const article = new Article(data)
-  const savedArticle = await article.save()
-  if (!savedArticle) {
-    return res.status(400).json({ status: "error", message: "article don't saved" })
+  try {
+    const savedArticle = await article.save()
+    return res.status(201).json({ status: "success", message: "Article added", article: savedArticle })
+  } catch (error) {
+    return res.status(400).json({ status: "error", message: `Failed to save article: ${error.message}` })
   }
-  return res.status(201).json({ status: "success", message: "Article added", article: savedArticle })
 }
 
 const get = async (req, res) => {
-  let quantity = req.query.quantity
+  let { quantity } = req.query
 
-  let query = await Article.find().limit(quantity ? quantity : null).sort({ date: -1 }).exec()
-  if (!query) {
-    return res.status(404).json({ status: "error", message: "articles not found" })
+  try {
+    let query = await Article.find().limit(quantity ? quantity : null).sort({ date: -1 }).exec()
+    if (!query) {
+      return res.status(404).json({ status: "error", message: "Articles not found" })
+    }
+    return res.status(200).json({ status: "success", message: "Get all articles", articles: query, count: query.length })
+  } catch (error) {
+    return res.status(500).json({ status: "error", message: `Internal Server Error: ${error.message}` })
   }
-  return res.status(200).json({ status: "success", message: "Get all articles", articles: query, count: query.length })
 }
 
 const getById = async (req, res) => {
   let { id } = req.params
-  let query
-  
+
   try {
-    query = await Article.findById(id)
+    let query = await Article.findById(id)
     if (!query) {
-      throw new Error("Error to get article by id")
+      return res.status(404).json({ status: "error", message: "Article not found" })
     }
+    return res.status(200).json({ status: "success", message: "Get article by id", article: query, count: query.length })
   } catch (error) {
-    return res.status(404).json({ status: "error", message: "article not found" })
+    return res.status(500).json({ status: "error", message: `Internal Server Error: ${error.message}` })
   }
-  return res.status(200).json({ status: "success", message: "Get article by id", article: query, count: query.length })
 }
 
 const deleteById = async (req, res) => {
   let { id } = req.params
 
-  let query = await Article.findOneAndDelete({ _id: id }).exec()
-
-  if (!query) {
-    return res.status(404).json({ status: "error", message: "Error to delete article" })
+  try {
+    let query = await Article.findOneAndDelete({ _id: id }).exec()
+    if (!query) {
+      return res.status(404).json({ status: "error", message: "Error deleting article" })
+    }
+    return res.status(200).json({ status: "success", message: "Deleted article", article: query, count: query.length })
+  } catch (error) {
+    return res.status(500).json({ status: "error", message: `Internal Server Error: ${error.message}` })
   }
-  return res.status(200).json({ status: "success", message: "Deleted article", article: query })
 }
 
 const updateById = async (req, res) => {
   let { id } = req.params
   let data = req.body
-
+  console.log(data)
   try {
     validateArticle(data)
+    let query = await Article.findOneAndUpdate({ _id: id }, data, { new: true })
+    if (!query) {
+      return res.status(404).json({ status: "error", message: "Error updating article" })
+    }
+    return res.status(200).json({ status: "success", message: "Updated article", article: query, count: query.length })
   } catch (error) {
-    return res.status(400).json({ status: "error", message: `Error to update article: ${error.message}` })
+    return res.status(400).json({ status: "error", message: `Error updating article: ${error.message}` })
   }
-
-  let query = await Article.findOneAndUpdate({ _id: id }, data, { new: true })
-  if (!query) {
-    return res.status(404).json({ status: "error", message: "Error to update article" })
-  }
-  return res.status(200).json({ status: "success", message: "updated article", article: query })
 }
 
 const uploadImage = async (req, res) => {
@@ -82,10 +88,10 @@ const uploadImage = async (req, res) => {
   }
 
   let fileName = req.file.originalname
-  let split_file = fileName.split("\.")
+  let split_file = fileName.split(".")
   let file_extension = split_file[1]
 
-  if (file_extension != "png" && file_extension != "jpg" && file_extension != "jpeg" && file_extension != "gif") {
+  if (!["png", "jpg", "jpeg", "gif"].includes(file_extension)) {
     fs.unlink(req.file.path, () => {
       return res.status(400).json({
         status: "error",
@@ -95,17 +101,22 @@ const uploadImage = async (req, res) => {
   } else {
     let { id } = req.params
 
-    let query = await Article.findOneAndUpdate({ _id: id }, { image: req.file.filename }, { new: true })
-    if (!query) {
-      return res.status(404).json({ status: "error", message: "Error to update article" })
+    try {
+      let query = await Article.findOneAndUpdate({ _id: id }, { image: req.file.filename }, { new: true })
+      if (!query) {
+        return res.status(404).json({ status: "error", message: "Error updating article image" })
+      }
+      return res.status(200).json({ status: "success", message: "Updated article", article: query, count: query.length, file: req.file })
+    } catch (error) {
+      return res.status(500).json({ status: "error", message: `Internal Server Error: ${error.message}` })
     }
-    return res.status(200).json({ status: "success", message: "updated article", article: query, file: req.file })
   }
 }
 
 const getArticleImage = (req, res) => {
   let file = req.params.file
   let path_file = `./images/articles/${file}`
+
   fs.stat(path_file, (error, exist) => {
     if (exist) {
       return res.sendFile(path.resolve(path_file))
@@ -118,19 +129,21 @@ const getArticleImage = (req, res) => {
 const searchArticle = async (req, res) => {
   let { search } = req.params
 
-  let query = await Article.find({
-    "$or": [
-      { "title": { "$regex": search, "$options": "i" } },
-      { "content": { "$regex": search, "$options": "i" } }
-    ]
-  })
-    .sort({ date: -1 })
-    .exec()
+  try {
+    let query = await Article.find({
+      $or: [
+        { title: { $regex: search, $options: "i" } },
+        { content: { $regex: search, $options: "i" } }
+      ]
+    }).sort({ date: -1 }).exec()
 
-  if (!query || query.length === 0) {
-    return res.status(404).json({ status: "error", message: "Not Found Articles" })
+    if (!query || query.length === 0) {
+      return res.status(404).json({ status: "error", message: "Not Found Articles" })
+    }
+    return res.status(200).json({ status: "success", message: "Get articles", articles: query, count: query.length })
+  } catch (error) {
+    return res.status(500).json({ status: "error", message: `Internal Server Error: ${error.message}` })
   }
-  return res.status(200).json({ status: "success", message: "get articles", articles: query, count: query.length })
 }
 
 module.exports = {
